testsuite/tests/properties/invalid_bind/valid_default_arg.lkt
import common

class BazNode: FooNode {
    @with_dynvars(dyn_node1)
    fun conv_prop(@ignored b: Bool = true): Entity[FooNode] =
        dyn_node1.as_bare_entity
}
